// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoadingIndicator component renders correctly 1`] = `
<LoadingIndicatorStyled
  className="centered font-bold"
>
  <div>
    <LoadingSpinner>
      <LoadingSpinnerBounceDelayedMore />
      <LoadingSpinnerBounceDelayed />
      <LoadingSpinnerBounce />
    </LoadingSpinner>
    Loading…
  </div>
</LoadingIndicatorStyled>
`;

exports[`LoadingIndicator component renders correctly without 'loading' text 1`] = `
<LoadingIndicatorStyled
  className="centered font-bold"
>
  <div>
    <LoadingSpinner>
      <LoadingSpinnerBounceDelayedMore />
      <LoadingSpinnerBounceDelayed />
      <LoadingSpinnerBounce />
    </LoadingSpinner>
  </div>
</LoadingIndicatorStyled>
`;
